@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class Lending {
    - id: Long
    - lendingCode: String
    - version: long
    - readerId: Long
    - bookId: Long
    - bookTitle: String
    - daysTillReturn: Integer
    - daysOverdue: Integer
    - fine: Float
    - returned: boolean
    - comment: String
}

class LendingController {
    + getAveragePerGenreInMonth(date: LocalDate): double
}

class LendingServiceImpl {
    + AveragePerGenreInMonth(date: LocalDate, numberOfGenres: int): double
}

class LendingRepository {
    + averagePerGenreInMonth(date: LocalDate, numberOfGenres: int): double
}

class GenreServiceImpl {
    + getGenres(): List<Genre>
    + getGenreById(genreId: Long): Optional<Genre>
}

class Genre {
    - id: Long
    - name: String
}

LendingController ..> LendingServiceImpl : uses
LendingServiceImpl ..> LendingRepository : uses
LendingController ..> GenreServiceImpl : uses
LendingServiceImpl ..> GenreServiceImpl : uses
GenreServiceImpl --> Genre : contains
LendingRepository ..> Lending : accesses

Lending "1" *-- "1" lendDate
Lending "1" *-- "1" returnedDate
Lending "1" *-- "1" limitDate

@enduml
